<resources>
    <string name="app_name">calendarviewsample</string>
    <string name="action_settings">Settings</string>
    <string name="action_art">Art</string>
    <string name="first">1</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="show_dialog_change_calendar_type">Change Calendar Type</string>
    <string name="show_dialog_change_calendar_view_type">Change Calendar View</string>
    <string name="change_locale_app">Change Language App</string>
    <string name="change_locale_calendar">Change Language Calendar</string>
    <string name="go_this_month">Go this Month</string>
    <string name="change_select_day_type">Change select day type</string>
    <string name="HeatMapCalendar">Heatmapcalendar</string>
    <string name="go_today">Go to Today</string>
    <string name="show_last_month">Show Last Month</string>
    <string name="show_previous_month">Show Previous Month</string>
    <string name="show_next_month">Show Next Month</string>
    <string name="show_week_name">Show Week Name</string>
    <string name="show_month_name">Show Month Name</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="change_text_style">Change Text Style</string>
    <string name="From">From</string>
    <string name="To">To</string>


</resources>